Update and rename index (11).html to index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
         function sendToGoogleSheet() {
-            const scriptURL = 'YOUR_GOOGLE_SHEET_SCRIPT_URL';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbwV-m03hzCxYiJF-A4vxFIQd4KDMK7dKdqAgGbVSqTGJ2zfRbOZkWPpZg1XVg_YKN6-/exec';
             const formData = new FormData();
             formData.append('name', userDetails.name);
             formData.append('class', userDetails.class);
