--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ v<!DOCTYPE html>
             { question: "When did jinnah join congress?", options: ["1906", "1905", "1903", "1885"], answer: "1906" },
             { question: "Who is known as the inventor of  Artificial Intelligence?", options: ["Classic Babbage", "John McCarthy", "Charles Babbage", "Charles Babbage"], answer: " John McCarthy" },
             { question: "The lower age limit for a candidate contesting Senate elections is:", options: ["30", "18", "20", "25"], answer: "30" },
+            { question: "When did Abdul Fatah born?", options: ["2008", "2009", "2010", "2011"], answer: "2009" },
                                     ];
                                                  
 
